这是一个页面

--- a/free/index.html
+++ b/free/index.html
@@ -24,7 +24,7 @@
 	<div class="content1 clearfix">
 		<div class="content1top">
 			<h3 class="fwn">
-				<span class="fl toux"><img src="../../作业/10/xq.jpg" alt="" width="100%" height="100%"></span>
+				<span class="fl toux"><img src="../free/img/co1.gif" alt="" width="100%" height="100%"></span>
 				Martin Groove
 				<span class="fr iconfont">&#xe670;&nbsp;175</span>
 			</h3>
@@ -46,7 +46,7 @@
 	<div class="content2 clearfix">
 		<div class="content2top">
 			<h3 class="fwn">
-				<span class="fl toux"><img src="../../作业/10/xq.jpg" alt="" width="100%" height="100%"></span>
+				<span class="fl toux"><img src="img/co1.gif" alt="" width="100%" height="100%"></span>
 				Martin Groove
 				<span class="fr iconfont">&#xe670;&nbsp;85</span>
 			</h3>
