添加了一个页面

--- a/Woman/index.html
+++ b/Woman/index.html
@@ -36,7 +36,7 @@
 			<div class="btn2 fr">ADD TO CART</div>
 		</div>
 	</header>
-	
+	<div class="stead"></div>
 	<div class="banner clearfix">
 			<div class="img"><img src="img/banner.png" alt=""></div>
 			<p class="">Elegant Pink Dresses<span class="fr">$605,00</span></p>
