--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 
 <body>
-	<a href="https://lalaa111.github.io/dd/Woman" title="裙子" target="_blank">
+	<a href="https://lalaa111.github.io/dd/Woman" title="裙子">
 		<div class="box">
 			<div class="front">前面</div>
 			<div class="back">后面</div>
